Day-2/Traffic Management/Traffic Shifting/virtual-service-reviews-50-v3.yaml
# vim samples/bookinfo/networking/virtual-service-reviews-50-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 50
    - destination:
        host: reviews
        subset: v3
      weight: 50


# kubectl apply -f samples/bookinfo/networking/virtual-service-reviews-50-v3.yaml
